[package]
name = "kon"
version = "0.6.10"
edition = "2024"

[workspace]
members = [
  "cmds",
  "libs",
  "repo",
  "tokens"
]

[workspace.dependencies]
bb8 = "0.9.0"
bb8-redis = "0.21.0"
cargo_toml = "0.22.1"
dashmap = "6.1.0"
poise = "0.6.1"
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.34.2"
lazy_static = "1.5.0"
tokio = { version = "1.44.2", features = ["macros", "signal", "rt-multi-thread"] }
uptime_lib = "0.3.1"
kon_libs = { path = "libs" }
kon_tokens = { path = "tokens" }
kon_repo = { path = "repo" }

[dependencies]
kon_cmds = { path = "cmds" }
kon_libs = { workspace = true }
kon_tokens = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }

[features]
production = ["kon_libs/production"]

[[bin]]
name = "kon"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
