[package]
name = "kon"
version = "0.7.0"
edition = "2024"

[workspace]
members = [
  "cmds",
  "libs",
  "tokens"
]

[workspace.dependencies]
asahi = "0.1.4"
cargo_toml = "0.22.1"
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.35.1"
lazy_static = "1.5.0"
poise = "0.6.1"
tokio = { version = "1.45.0", features = ["macros", "signal", "rt-multi-thread"] }
uptime_lib = "0.3.1"
kon_libs = { path = "libs" }
kon_tokens = { path = "tokens" }

[dependencies]
kon_cmds = { path = "cmds" }
kon_libs = { workspace = true }
kon_tokens = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }

[features]
production = ["kon_libs/production"]

[[bin]]
name = "kon"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
