[package]
name = "kon_cmds"
version = "0.1.5"
edition = "2024"

[dependencies]
kon_libs = { workspace = true }
kon_tokens = { workspace = true }
lazy_static = { workspace = true }
poise = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
uptime_lib = { workspace = true }
dashmap = { workspace = true }
